# musicboxd

./: .gitignore  CLAUDE.md  Cargo.toml
migrations/: 0001_initial_schema.sql  0003_spotify_cache.sql  0004_use_spotify_ids.sql  0005_spotify_tracks.sql  0006_search_cache_by_offset.sql
public/: style.css
src/: app.rs  auth.rs  lib.rs  main.rs  rate_limit.rs  spotify.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: follow_list.rs  migrations.rs  profile.rs  rating_reviews.rs  search_pagination.rs  user_search.rs
