[package]
name = "musicboxd-tauri"
version = "0.1.0"
description = "Musicboxd - music rating app"
authors = []
edition = "2021"

[lib]
name = "musicboxd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
